--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
-    "react-apollo": "^1.4.2",
-    "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1",
-    "react-scripts": "^1.0.14",
-    "subscriptions-transport-ws": "^0.8.2"
+    "apollo-cache-inmemory": "^0.2.0-beta.4",
+    "apollo-client": "^2.0.0-beta.4",
+    "apollo-link": "^0.7.0",
+    "apollo-link-http": "^0.7.0",
+    "graphql-tag": "^2.4.2",
+    "react": "^16.0.0",
+    "react-apollo": "^2.0.0-beta.0",
+    "react-dom": "^16.0.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "^1.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
