--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-cache-inmemory": "^0.2.0-beta.4",
-    "apollo-client": "^2.0.0-beta.4",
-    "apollo-link": "^0.7.0",
-    "apollo-link-http": "^0.7.0",
+    "apollo-cache-inmemory": "^0.2.0-rc.1",
+    "apollo-client": "^2.0.0-rc.3",
+    "apollo-link": "^0.8.0",
+    "apollo-link-http": "^0.8.0",
+    "apollo-link-ws": "^0.6.0",
     "graphql-tag": "^2.4.2",
     "react": "^16.0.0",
     "react-apollo": "^2.0.0-beta.0",
