--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.3.1",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.3"
