--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-form-state": "^0.3.0",
+    "react-use-form-state": "^0.9.0",
     "terser": "^3.14.1"
   }
 }
