--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:server": "babel-node ./src/server",
+    "dev:server": "nodemon ./build/server",
     "dev:client": "webpack --watch",
     "dev": "npm-run-all --parallel dev:server dev:client",
-    "prod:server": "babel-node ./src/server",
+    "prod:server": "node ./build/server.js",
     "build": "webpack -p --devtool none",
     "prod": "npm-run-all --parallel prod:server prod:client"
   },
@@ -35,6 +35,7 @@
     "express": "^4.16.4",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
+    "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
