--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-form-state": "^0.3.0",
+    "react-router-dom": "^5.0.0",
     "react-use-form-state": "^0.9.0",
     "terser": "^3.14.1"
   }
