--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,11 @@
     "workspace.code-workspace": true,
     "yarn.lock": true,
     "build": true,
-    ".vscode": true
+    ".vscode": true,
+    "app\\node_modules": true,
+    "server\\yarn.lock": true,
+    "app\\yarn.lock": true,
+    "app-final\\yarn.lock": true,
+    "server\\node_modules": true
   }
 }
