--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-use-form-state": "^0.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
