--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "apollo-link-context": "1.0.7",
     "apollo-link-ws": "1.0.7",
     "graphql": "0.13.1",
-    "react": "16.2.0",
+    "react": "16.8.4",
     "react-apollo": "2.1.0",
-    "react-dom": "16.2.0",
+    "react-dom": "16.8.4",
+    "react-hanger": "^1.1.4",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
-    "react-scripts": "1.1.1",
+    "react-scripts": "2.1.8",
+    "react-use-form-state": "^0.9.0",
     "subscriptions-transport-ws": "0.9.7"
   },
   "scripts": {
@@ -20,5 +22,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
