--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apollo-boost": "0.1.4",
     "apollo-link-context": "1.0.7",
     "apollo-link-ws": "1.0.7",
+    "classnames": "^2.2.6",
     "graphql": "0.13.1",
     "react": "16.8.4",
     "react-apollo": "2.1.0",
