--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.12.1",
+    "prisma": "^2.28.0",
     "nodemon": "^2.0.6"
   }
 }
