--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,13 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "@prisma/client": "^2.12.1",
+    "@prisma/client": "^2.20.1",
     "apollo-server": "^2.19.0",
     "bcryptjs": "2.4.3",
     "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.12.1",
+    "prisma": "^2.20.1",
     "nodemon": "^2.0.6"
   }
 }
